# thaldb1

./: .djlintrc  .env.example  .gitignore  README.md  TODO.md  db copy.sqlite3  db1.sqlite3  main.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
clients/: admin.py  form.py  models.py  models_bac.py  tests.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_alter_transfusion_special_type.py  0002_rename_transfusion_hb_levels.py
clients/models/: client.py  drug.py  lookup.py  management.py
clients/templates/clients/: client_admission_form.html  client_admission_list.html  client_detail.html  client_form.html  client_investigation_list.html  client_list.html  client_transfusion_list.html
clients/views/: __init__.py  admissions.py  clients.py  mixins.py  transfusions.py
clients/views/investigations/: __init__.py  lists.py
fixtures/: lookup_seed.json
scripts/: reseed_lookups.sh
static/css/: output.css
templates/: base.html  navbar.html
templates/registration/: login.html
thallk/: add_data.py  asgi.py  settings.py  settings_bak.py  urls.py  wsgi.py
thallk/settings/: base.py  dev.py  prod.py
users/: admin.py  forms.py  models.py  roles.py  signals.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_thalassemia_unit.py
users/templates/: index.html  test.html
